--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="{% static 'img/home/angaar_logo-circle.png' %}">
 
     <meta property="og:title" content="The Angaar Batch🔥">
-    
+
     <meta property="og:description"
         content="Agr Angaar Hai Tere Houslo Me, To Bas Dekhke Mat Ja... Seekh... Or Lga de... ANGAAR🔥">
     <meta property="og:image" content="https://theangaarbatch.in/static/img/home/angaari_logo.png">
@@ -184,8 +184,7 @@
                     </li> -->
 
                     <li class="nav-item">
-                        <a class="nav-link" style="color: rgb(253, 135, 0);"
-                            href="{% url 'flare' %}">FLARE 1.0🔥</a>
+                        <a class="nav-link" style="color: rgb(253, 135, 0);" href="{% url 'flare' %}">FLARE 1.0🔥</a>
                     </li>
 
                     <!--  <li class="nav-item">
@@ -288,7 +287,7 @@
                     <p><a href="{% url 'our_team' %}">Our Team</a></p>
                     <p><a href="{% url 'privacy_policy' %}">Privacy Policy</a></p>
                     <p><a href="{% url 'terms_of_service' %}">Terms of Service</a></p>
-                    
+
                     <!-- <p><a href="{% url 'articles' %}">Job Articles</a></p> -->
 
                     <p>
@@ -331,7 +330,7 @@
                 return false;
             }
             //if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-             //   return false;
+            //   return false;
             //}
             if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
                 return false;
